# cpp-sandbox

./: .clang-format  .gitignore  README.md
.github/workflows/: github-actions.yml
01_hello/: build-code.sh
01_hello/include/: hello.hpp
01_hello/src/: hello.cpp  main.cpp
02_hello-library/lib/: CMakeLists.txt
02_hello-library/src/: hello.cpp  main.cpp
03_map-example/: CMakeLists.txt  build-code.sh
03_map-example/include/: fun.hpp
03_map-example/src/: fun.cpp  main.cpp
04_pointers-example/: build-code.sh
04_pointers-example/include/: fun.hpp
04_pointers-example/src/: fun.cpp  main.cpp
05_encapsulation/: CMakeLists.txt
05_encapsulation/include/: fun.hpp
05_encapsulation/src/: fun.cpp  main.cpp
06_unique-smart-pointer/include/: controller.hpp
07_shared-smart-pointer/: CMakeLists.txt  build-code.sh
08_pass-by-reference/: CMakeLists.txt
11_vector/: CMakeLists.txt
12_operator/: CMakeLists.txt
13_execution_time/: CMakeLists.txt  build-code.sh  main.cpp
16_rule_of_five/: CMakeLists.txt  build-code.sh
17_error_handling/: build-code.sh  error_handling.cpp
18_object_instance_counter/: build-code.sh  object_instance_counter  object_instance_counter.cpp
19_object_instance_counter_v2/: CMakeLists.txt  build-code.sh
20_memory_copy/: build-code.sh  test_copy  test_copy.cpp
encapsulation/: build-code.sh
hello-library/: CMakeLists.txt  build-code.sh
hello-library/lib/include/: helloLib.hpp
pass-by-reference/: build-code.sh
pointers-example-one/: CMakeLists.txt
smart-pointer/: CMakeLists.txt  build-code.sh
(+46 files in other folders)
